<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">QuanLiThuVien</string>

    <string name="gmail">Gmail</string>
    <string name="m_t_kh_u">Mật khẩu</string>
    <string name="qu_n_m_t_kh_u">Quên mật khẩu</string>
    <string name="nh_p_l_i_m_t_kh_u">Nhập lại mật khẩu</string>

    <string name="todo">TODO</string>
    <string name="nh_p_s_i_n_tho_i">Nhập số điện thoại</string>
    <string name="trang_ch">Trang chủ</string>
    <string name="t_m_s_ch">Tìm sách</string>
    <string name="t_m_ng_i_b_n">Tìm người bán</string>
    <string name="c_i_t">Cài đặt</string>
    <string name="c_nh_n">Cá nhân</string>
    <string name="title_activity_edit_book">Edit_Book</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity2</string>

</resources>